Bug 5. Centralizei o texto da tabela com text-align

--- a/modulo2/css-bugfixes/index.css
+++ b/modulo2/css-bugfixes/index.css
@@ -7,6 +7,7 @@
 * {
     margin: 0;
     padding: 0;
+    
 }
 
 h2 {
@@ -23,6 +24,7 @@ input {
 
 button:focus {
     color: white;
+    
 }
 
 img {
@@ -44,6 +46,9 @@ div img {
     border-radius: 5px;
     font-size: 20px;
     color: white;
+    
+    
+   
 }
 
 .botao-amarelo:hover {
@@ -69,6 +74,7 @@ div img {
 #container-de-descricao {
     background-color: #2274a5;
     color: white;
+
 }
 
 #container-de-descricao>ol {
@@ -77,6 +83,7 @@ div img {
 
 #container-para-comprar {
     background-color: #e7eb90;
+    
 }
 
 #container-para-comprar>p {
@@ -99,6 +106,7 @@ div:last-child {
 
 table {
     width: 60%;
+    text-align: center
 }
 
 td button {
